Show the player, still not avoiding 'too small' errors

--- a/public/less/jukebox.less
+++ b/public/less/jukebox.less
@@ -3,7 +3,10 @@ body {
 }
 
 #yt-player-outer {
-	display: none;
+  height: 300;
+  width: 400;
+  text-align: center;
+	/*display: none;*/
 }
 
 #controls .row #control-box {
